--- a/main.html
+++ b/main.html
@@ -11,25 +11,32 @@
 <body>
   <div id="root"></div>
   <script>
+    // 엔코딩키 이 키가 주가 된다
     const EncodingKEY = `	
 aabdjVtDyODuXtGkvJfA7GEEAE%2B7oKgHMt3Vs2z1iZZy%2Fh0S9KF7iOxPZFyyqKg28lO9bKPRcx3WzJxQtZnlXg%3D%3D`
+    // 디코딩키 = 디코드의 인증키
     const DecodingKEY = `aabdjVtDyODuXtGkvJfA7GEEAE+7oKgHMt3Vs2z1iZZy/h0S9KF7iOxPZFyyqKg28lO9bKPRcx3WzJxQtZnlXg==`
-
+    // 아이템의 주소
     const ItemURL = `http://apis.data.go.kr/6300000/animalDaejeonService/animalDaejeonItem`
+    // 리스트의 주소
     const ListURL = `http://apis.data.go.kr/6300000/animalDaejeonService/animalDaejeonList`
-
+    //쿼리파람스 주소뒤에 붙여서 사용
     const queryParams = '?' + 'serviceKey' + '=' + EncodingKEY;
-
+    //root div끌어오고 스타일 지정
     const root = document.getElementById("root")
     root.style.width = "100vw"
     root.style.height = "100vh"
     root.style.display = "flex"
     root.style.flexWrap = "wrap"
     // root.innerHTML += "<div>저희의 이름을 찾아주세요.</div>"
-    let item;
-    let list;
-    let itemList = []
 
+    // 무슨변수더라
+    let item;
+    //list 전역변수
+    let list;
+    // item list 전역 배열
+    let itemList = []
+    // 비동기 함수
     async function dataFUNC() {
       const res = await fetch(ListURL + queryParams + `&numOfRows=9`).then(datas => datas.text())
         .then((data) => {
